--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h4 class="sports">Sports</h4>
         <h4 class="news">News</h4>
         <h4 class="pre">Premium</h4>
-        <h4 class="new">Disney+<a href="https://www.hotstar.com/in/disneyplus">New</a></h4>
+        <h4 class="new">Disney+<a href="#">New</a></h4>
     </div>
 
     <div class="content">
